--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ section p{
 }
 /*background image section pertama*/
 .banner-area .banner-img{
-	background-image: url(img/rumah.jpg);
+	background-image: url(/img/rumah.jpg);
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -200,7 +200,7 @@ section p{
   	left: 0;
   	width: 100%;
   	height: 100px;
-  	background: url(img/wave.png);
+  	background: url(/img/wave.png);
   	background-size: 1000px 100px;
 
 }
