--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ section p{
 }
 /*background image section pertama*/
 .banner-area .banner-img{
-	background-image: url(img/rumahhutan.jpg);
+	background-image: url(Hotelapp/img/rumahhutan.jpg);
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -293,7 +293,7 @@ ul.about-content {
 
 .about-left {
 	flex-basis: 40%;
-	background-image: url(img/rumahbanyak);
+	background-image: url(Hotelapp/img/rumahbanyak);
 	background-position: center;
 
 }
