--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ section p{
 }
 /*background image section pertama*/
 .banner-area .banner-img{
-	background-image: url(Hotelapp/img/rumahhutan.jpg);
+	/*background-image: url(Hotelapp/img/rumahhutan.jpg);*/
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -199,7 +199,7 @@ section p{
   	left: 0;
   	width: 100%;
   	height: 100px;
-  	background: url(img/wave.png);
+  	/*background: url(img/wave.png);*/
   	background-size: 1000px 100px;
 
 }
@@ -344,49 +344,4 @@ ul.services-content {
 	flex-wrap: wrap;
 	justify-content: center;
 }
-.services-content li {
-	padding: 0 30px;
-	flex-basis: 33%;
-	text-align: center;
-}
-.services-content li i {
-	font-size: 50px;
-	color: #11998e;
-	margin-bottom: 25px;
-}
-.services-content li h4 {
-	font-size: 20px;
-	margin-bottom: 25px;
-}
-.services-content li p {
-	margin: 0;
 
-}
-
-@media (max-width: 1000px) {
-	.services-content li {
-		flex-basis: 100%;
-		margin-bottom: 65px;
-	}
-	.services-content li:last-child {
-		margin-bottom: 0;
-	}
-	.services-content li p {
-		padding: 0;
-	}
-}
-
-
-footer {
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	text-align: center;
-	color: #fff;
-	background-color: #000;
-	padding: 60px 0;
-}
